fix(design): fix navbar colors and button on mobile.

--- a/src/app/home/splashscreen/home.splashscreen.component.scss
+++ b/src/app/home/splashscreen/home.splashscreen.component.scss
@@ -1,4 +1,5 @@
 header.masthead {
+    min-height: 100%;
     padding-top: 10rem;
     padding-bottom: calc(10rem - 56px);
     background: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)),
