--- a/src/app/home/topbar/home.topbar.component.scss
+++ b/src/app/home/topbar/home.topbar.component.scss
@@ -1,6 +1,6 @@
 #topbar {
     border-bottom: 1px solid #282828;
-    background-color: #282828;
+    background-color: #282828 !important;
     font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
     -webkit-transition: all 0.2s;
     transition: all 0.2s;
